# collaborate-core

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  init-db.cql  main.rs
src/: db.rs  document_service.rs  http_server.rs  main.rs  scylla_connector.rs  user_manager.rs
src/user/: errors.rs  mod.rs  models.rs  repository.rs
