[package]
name = "collaborate-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.x"
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.7.x", features = ["ws"] } # Added Axum with WebSocket feature
scylla = { version = "1.x" } # Removed chrono feature, as it's likely included or handled differently in 1.1.0
uuid = { version = "1.7", features = ["v4", "serde"] } # For unique document IDs
chrono = { version = "0.4", features = ["serde"] } # For timestamps
serde = { version = "1.0", features = ["derive"] } # For serialization, if needed
thiserror = "1.0" # For custom error types
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] } # For WebSocket stream handling
tracing = "0.1" # Optional: for better logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Optional: for better logging

[[bin]]
name = "main"
path = "src/main.rs"
