[package]
name = "collaborate-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.x"
tokio = { version = "1.45", features = ["full"] }
sqlx = { version = "0.8.x", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
axum = { version = "0.7.x", features = ["ws"] }
uuid = { version = "1.x", features = ["v4"] }
chrono = { version = "0.x" }

[[bin]]
name = "main"
path = "src/main.rs"
